--- a/src/components/ColorPicker/ColorPicker.css
+++ b/src/components/ColorPicker/ColorPicker.css
@@ -1,10 +1,10 @@
 .wrapper {
-  width: 600px;
+  max-width: 600px;
   margin: 20px auto;
   padding: 10px;
   text-align: center;
 
-  border: 1px solid rgb(122 118 97 / 98%);
+  border: 1px solid teal;
   border-radius: 6px;
 
   background-color: #fff;
