--- a/src/components/Counter/Controls.module.css
+++ b/src/components/Counter/Controls.module.css
@@ -1,8 +1,9 @@
 .btnWrapper {
-  width: 400px;
+  max-width: 400px;
   margin: 30px auto;
 
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 
