--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -1,9 +1,10 @@
 .Dropdown {
   margin: 0 auto;
   position: relative;
-  width: 400px;
+  max-width: 600px;
   padding: 20px;
-  border: 1px solid #000;
+  background-color: #fff;
+  border: 1px solid teal;
   text-align: center;
 }
 
