--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -1,6 +1,16 @@
+.wrapper {
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 20px;
+
+  color: #555a5d;
+}
+
 .Todolist {
   margin: 0 auto;
-  width: 400px;
+  padding: 10px 0;
+
+  max-width: 400px;
 }
 
 .Todolist__item {
