--- a/src/components/Toggle/Toggle.module.css
+++ b/src/components/Toggle/Toggle.module.css
@@ -1,9 +1,10 @@
 .Dropdown {
   margin: 60px auto 0;
   position: relative;
-  width: 400px;
+  max-width: 600px;
   padding: 20px;
-  border: 1px solid #000;
+  background-color: #fff;
+  border: 1px solid teal;
   text-align: center;
 }
 
@@ -35,7 +36,7 @@ button.toggle {
 
 .menu {
   position: absolute;
-  top: 100%;
+  top: -72%;
   left: 0;
   width: 100%;
   padding: 20px;
